--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@wdio/local-runner": "^9.20.0",
     "@wdio/mocha-framework": "^9.20.0",
     "@wdio/spec-reporter": "^9.20.0",
-    "wdio-html-nice-reporter": "^8.1.7"
+    "wdio-html-nice-reporter": "^8.1.7",
+    "webdriverio": "^9.20.0"
   },
   "scripts": {
     "wdio": "wdio run ./wdio.conf.js"
