--- a/.github/workflows/wdio-ci.yml
+++ b/.github/workflows/wdio-ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Run WDIO tests
-        run: npx wdio run wdio.conf.js
+        run: npm run wdio
 
       - name: Upload HTML Report
         uses: actions/upload-artifact@v4
