--- a/.github/workflows/wdio-ci.yml
+++ b/.github/workflows/wdio-ci.yml
@@ -29,3 +29,5 @@ jobs:
         with:
           name: html-report
           path: ./reports/html
+      - name: Fix wdio permissions
+        run: chmod +x node_modules/.bin/wdio
