--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "webdriverio": "^9.20.0"
   },
   "scripts": {
-    "wdio": "wdio run ./wdio.conf.js"
+    "wdio": "npx wdio run ./wdio.conf.js"
   }
 }
